# PInT

./: CMakeLists.txt  Debug.h  DesignSpaces.cpp  DesignSpaces.h  DocumentationHalstead.docx  Doxyfile  FindHPCPatternAction.cpp  FindHPCPatternAction.h  FindHPCPatternConsumer.cpp  FindHPCPatternConsumer.h  FindHPCPatternVisitor.cpp  FindHPCPatternVisitor.h  FunctionDeclDatabase.cpp  FunctionDeclDatabase.h  HPCError.cpp  HPCError.h  HPCParallelPattern.cpp  HPCParallelPattern.h  HPCPatternHandler.cpp  HPCPatternHandler.h  HPCPatternInstrASTTraversal.cpp  HPCPatternInstrASTTraversal.h  HPCPatternInstrHandler.cpp  HPCPatternInstrHandler.h  HPCPatternStatistics.cpp  HPCPatternStatistics.h  HPCPatternTool.cpp  HPCPatternTreeVisualisation.cpp  HPCPatternTreeVisualisation.h  HPCRunningStats.cpp  HPCRunningStats.h  Helpers.cpp  Helpers.h  LICENSE  ParallelPattern.cpp  ParallelPattern.h  PatternGraph.cpp  PatternGraph.h  README.md  SimilarityMetrics.cpp  (+9 more)
InstrumentationHeader/: PatternInstrumentation.cpp  PatternInstrumentation.h
TestProgramme/FabiansTests/rodinia-bfs/: CMakeLists.txt  bfs.cpp  compile_commands.json
TestProgramme/FabiansTests/test-example/: CMakeLists.txt  PatternInstrumentationC.h  compile_commands.json  external-function.cpp  external-function.h  test-example.cpp
TestProgramme/MeinTestProgramm/: CMakeLists.txt  Tests.cpp  Tests.h  compile_commands.json  main.cpp
Tests/TestClearNesting/: CMakeLists.txt  PatternInstrumentation.h  TestsTest3.cpp  TestsTest3.h  compile_commands.json  desiredOutput.txt  main.cpp
Tests/TestCorrectCallerCalleeAssosiation/: CMakeLists.txt  Counts.csv  FIFO.csv  LOC.csv  TestsTestCorrectCalleeAssosiation.cpp  TestsTestCorrectCalleeAssosiation.h  compile_commands.json  desiredOutput.txt  mainTestCorrectCalleeAssosiation.cpp
Tests/TestCorrectChildRegistration/: CMakeLists.txt  TestsCorrectChildRegistration.cpp  compile_commands.json  desiredOutput.txt  mainCorrectChildRegistration.cpp
Tests/TestForTrackingEndsAnsBegins/: CMakeLists.txt  Counts.csv  FIFO.csv  LOC.csv  TestsForTrackingEndsAndBegins.cpp  compile_commands.json  desiredOutput.txt  mainForTrackingEndsAndBegins.cpp
Tests/TestRecursion/: CMakeLists.txt  TestsRecusion.cpp  compile_commands.json  desiredOutput.txt  mainRecusion.cpp
Tests/TestSpreadedPattern/: CMakeLists.txt  Counts.csv  FIFO.csv  LOC.csv  TestsTest4.cpp  compile_commands.json  desiredOutput.txt  mainTest4.cpp
Tests/TestTooManyEnds/: CMakeLists.txt  TestsTooManyEnds.cpp  compile_commands.json  desiredOutput.txt  mainTooManyEnds.cpp
